--- a/application/templates/result.html
+++ b/application/templates/result.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Quiz Results</h1>
-    <p>{{ result['source'] }}</p>
+    <p>{{ result }}</p>
     <a href="/">Try Again</a>
 </body>
 </html>
