--- a/application/templates/gameover.html
+++ b/application/templates/gameover.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Quiz Results</h1>
     <p>{{ result }}</p>
-    <a href="/">Next question</a>
+    <a href="/restart">Try Again</a>
 </body>
 </html>
