--- a/application/templates/result.html
+++ b/application/templates/result.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Quiz Results</h1>
+    <img src="https://i.giphy.com/{{ gif_id }}.webp">
     <p>{{ result }}</p>
     <a href="/">Next question</a>
 </body>
